added os directory

--- a/Data for Good.ipynb
+++ b/Data for Good.ipynb
@@ -21,6 +21,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd \n",
     "import plotly as py\n",
     "import seaborn as sns \n",
